trying new things

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
   <div id="slide-show">
-    <h1>Your Personal Slideshow</h1>
-    <h2>Pick a word, and see photos of it!</h2>
+    <header>
+      <h1>Your Personal Slideshow</h1>
+      <h2>See random photos based on your search!</h2>
+    </header>
     <form id="form">
       <label for="input">Search for image</label>
       <input id="input" type="text">
       <input type="submit">
     </form>
     <div id="photo-display">
-      <img src="" alt="" id="slide">
+      <!-- <img src="" alt="" id="slide"> -->
     </div>
   </div>
 </body>
