still working, but messy styling

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <title>Reddit Slide Show</title>
 </head>
 <body>
+  <header>
+    <h1>Your Personal Slideshow</h1>
+    <h2>See random photos based on your search!</h2>
+  </header>
   <div id="slide-show">
-    <header>
-      <h1>Your Personal Slideshow</h1>
-      <h2>See random photos based on your search!</h2>
-    </header>
     <form id="form">
       <label for="input">Search for image</label>
       <input id="input" type="text">
       <input type="submit">
     </form>
-    <div id="photo-display">
-    </div>
+    <div id="photo-display"></div>
   </div>
+  <button></button>
 </body>
 </html>
