--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <div id="search-and-start"> 
 
         <div id="photo">
-          <p>Photos go here</p>
+       
         </div>
-        
+
         <form id="form">
-          <input id="fname" type="text" value="search for pics" >
-          <input type="submit">
+          <input id="input" type="text"  value="">
+        <input type="submit">
         </form>
-        <button id="stop-start">Start</button>
+        <button id="stop">Stop</button>
 
     </div>
   </div>
