--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <div id="photo-display"></div>
   </div>
   <button></button>
+  <img id="mag-img" src="./magnifyingGlass.png" alt="magnifying glass">
 </body>
 </html>
