need to remove header and stop slideshow

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <h1>Reddit Slide Show</h1>
     <h2>Type in a search term and hit </h2>
     <div id="form">
-      <form id="userRequest">
+      <!-- <form id="userRequest"> -->
         <input id="user-input" type="script">
         <button id="button">Search </button>
-      </form>
+      <!-- </form> -->
     </div>
   </div>
-  <div id='image-results'>
-    <div id="pictureResults"></div>
-    <button id="stop">Stop Slideshow</button>
+  <div id='slides-container'>
+    </div>
 
+
+<div>
+    <button id="stop">Stop Slideshow</button>
+  </div>
   </div>
   
   
