additional work needed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <p>Have a hankering for Reddit's best and worst? Look no further!</p><br></p>
   </div>
 
-  <div id="imagebox" [type="image"]></div>
+  <div id ="container">
+    <div id="photobox">
+        <div id="search-and-start">
+            <div id="photo">
+  </div>
 
  
   <form role="search" id="form">
