--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <title>Dogs</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Dogs</h1>
+  <p></p>
+  <div>
+    <form id="form">
+      <input id="input" type="number" min="1" value="1">
+      <input type="submit">
+  </form>
+  <div id="container"></div>
+  <div id="single-dog"></div>
+  <button id="see-all-dogs">See all dogs</button>
+  </div>
+  <script src="./js/index.js" defer></script>
 </body>
 </html>
