Created Js, and CSS folders to work in, needs to be finished

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Pinterest Slideshow</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <main>
+    <button id="next-picture">Next</button>
+    <div id="container">test</div>
+    <form id="form">
+      <input id="input" type="word" >
+      <input type="submit">
+  </main>
+  <script src="index.js"></script>
 </body>
 </html>
