--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="./css/index.css" />
+  
+  <title>Wholesome Slideshow</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Welcome to the internet</h1>
+  <h1>~ A Slideshow ~</h1> 
+  </h4>Enter a word below for an inspired slideshow courtesy of Reddit</h4>
+  <form id="form">
+    <input id="input" type="word" value=""></br>
+    <input id="clickMe" type="button" value="Click Me">
+  </form>
+  <button id="stop" type="button">Stop Slideshow</button>
+  <img id="display-box"/>
+  <img id="see-images"/>
+
+
+  <script src="./js/index.js" defer></script>
 </body>
 </html>
