everything is back in place, and search looks better, now need mobile sizing

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <form id="form">
       <label for="input">Search for image</label>
       <input id="input" type="text">
-      <input type="submit">
+      <input type="submit" id="submit" value="search">
     </form>
     <div id="photo-display"></div>
-    <button></button>
+    <button id="stop"></button>
   </div>
   <img id="mag-img" src="./magnifyingGlass.png" alt="magnifying glass">
 </body>
