fetch-reddit-slideshow

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="index.css">
+  <title>Dog.</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Dog.</h1>
+  <form id="form">
+    <button id="startSearch">Search</button>
+    <input id="input" type="search">
+    <button id="resetBtn">Reset</button>
+  </form>
+  <div id="container"></div>
+  <script src="index.js"></script>
 </body>
 </html>
