completed fetch-reddit-slideshow

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="index.css">
+  <title>hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Search Picture</h1>
+  <form>
+    <input id="search" type="text">
+  </form>
+  <button id="button"
+type="submit">Search</button>
+<button id="stop-bttn">Stop</button>
+<div id="image-container"></div>
+<script src="./index.js"></script>
 </body>
 </html>
