--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Fetch reddit</title>
+  <link rel="stylesheet" href="./css/css.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1></h1>
+  
+  <form class="form">
+    <div class="container" id="window"></div>
+    <button type="button" id="start">start slideshow</button>
+    <button type="button" id="stop">stop</button>
+  </form>
+  
+  </div>
+  <script src="./js/js.js"></script>
 </body>
 </html>
+
+
+
