--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./index.css" rel="stylesheet" />
   <title>Hello Front-End</title>
 </head>
+<div>
+  <h1>Welcome To Reddit</h1>
+  <div class = "Search">
+    <button type="button" id="start">Go</button>
+    <button type="button" id="stop">Stop</button>
+  </div>
 <body>
-  <h1>Hello Front-End</h1>
+  <script>
+const frame = document.createElement('img')
+document.addEventListener("DOMContentLoaded",() =>{
+  fetch('http://www.reddit.com/search.json?q=cats+nsfw:no')
+} )
+
+
+
+
+  </script>
 </body>
 </html>
