--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <form id="search-form">
     <input type="text" min="1" id="user-search">
     <input type="submit">
+    <input type="button" value="Stop" id="stop-show">
   </form>
   <div id="slideshow" class="Slideshow" data-ride="carousel">
    
