--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div>
     <h1>Welcome To Reddit</h1>
     <div class = "Search">
+      <div class = 'container' id="window"></div>
       <button type="button" id="start">Go</button>
       <button type="button" id="stop">Stop</button>
     </div>
